Fixed bugs, extending interface